--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node",
