Fix issue in getting config values on running Jest

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint" : "eslint . --ignore-pattern node_modules\/;exit 0",
     "test": "jest",
     "start": "node index.js",
     "dev": "nodemon index.js"
