--- a/utils/swagger/docs/routes/api.task.post.yaml
+++ b/utils/swagger/docs/routes/api.task.post.yaml
@@ -7,8 +7,10 @@ paths:
       produces:
         - application/json
       responses:
-        200:
+        201:
           description: A success message having the task id
+        400:
+          description: Missing parameters
       parameters:
         - name: name
           in: formData
